--- a/index.html
+++ b/index.html
@@ -102,43 +102,8 @@
           <h2 class="text-2xl font-bold">Berita Terbaru</h2>
           <a href="/berita.html" class="text-primary font-medium hover:underline mt-2 md:mt-0"> Lihat Semua Berita <i class="fas fa-arrow-right ml-2"></i> </a>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-          <div class="card">
-            <div class="h-48 bg-gray-200 border-2 border-dashed rounded-t-xl"></div>
-            <div class="p-6">
-              <div class="text-sm text-gray-500 mb-2">12 Agustus 2025</div>
-              <h3 class="font-bold text-lg mb-3">Peluncuran Sistem Perizinan Online Terbaru</h3>
-              <p class="text-gray-600 mb-4">Platform Izin.In meluncurkan fitur terbaru untuk mempermudah proses perizinan UMKM secara online.</p>
-              <a href="#" class="text-primary font-medium hover:underline">Baca selengkapnya</a>
-            </div>
-          </div>
-          <div class="card">
-            <div class="h-48 bg-gray-200 border-2 border-dashed rounded-t-xl"></div>
-            <div class="p-6">
-              <div class="text-sm text-gray-500 mb-2">8 Agustus 2025</div>
-              <h3 class="font-bold text-lg mb-3">Workshop Digitalisasi UMKM 2025</h3>
-              <p class="text-gray-600 mb-4">Ikuti workshop gratis untuk mempelajari strategi digitalisasi usaha kecil dan menengah.</p>
-              <a href="#" class="text-primary font-medium hover:underline">Baca selengkapnya</a>
-            </div>
-          </div>
-          <div class="card">
-            <div class="h-48 bg-gray-200 border-2 border-dashed rounded-t-xl"></div>
-            <div class="p-6">
-              <div class="text-sm text-gray-500 mb-2">5 Agustus 2025</div>
-              <h3 class="font-bold text-lg mb-3">Panduan Lengkap Perizinan Usaha Kuliner</h3>
-              <p class="text-gray-600 mb-4">Temukan panduan lengkap untuk mengurus perizinan usaha di bidang kuliner dengan mudah.</p>
-              <a href="#" class="text-primary font-medium hover:underline">Baca selengkapnya</a>
-            </div>
-          </div>
-          <div class="card">
-            <div class="h-48 bg-gray-200 border-2 border-dashed rounded-t-xl"></div>
-            <div class="p-6">
-              <div class="text-sm text-gray-500 mb-2">1 Agustus 2025</div>
-              <h3 class="font-bold text-lg mb-3">Izin.In Raih Penghargaan Inovasi Pelayanan Publik</h3>
-              <p class="text-gray-600 mb-4">Platform kami meraih penghargaan sebagai inovasi terbaik dalam pelayanan publik bidang UMKM.</p>
-              <a href="#" class="text-primary font-medium hover:underline">Baca selengkapnya</a>
-            </div>
-          </div>
+        <div id="latest-news-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- Berita terbaru akan dimuat di sini oleh JavaScript -->
         </div>
       </div>
     </section>
@@ -323,6 +288,7 @@
     </footer>
 
     <!-- JavaScript for Navbar -->
-    <script src="js/navbar.js"></script>
+    <script src="/js/navbar.js"></script>
+    <script src="/js/news.js"></script>
   </body>
 </html>
